QA-12044 fix issue with an empty modules value, fix easy sonar lint issues, fix JS in the associate JSP